src/kubernetes/web-docs.kube.ci.yaml
apiVersion: v1
kind: Service
metadata:
  name: vh-web-docs
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      timeout_ms: 30000
      name:  vh-web-docs-map-#{KubernetesNamespace}#
      prefix: /_admin/#{KubernetesNamespace}#/vh-web-docs/
      add_response_headers:
        Strict-Transport-Security "max-age=86400;"
      service: vh-web-docs.#{KubernetesNamespace}#.svc.cluster.local
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      timeout_ms: 30000
      name:  vh-web-docs-map-#{KubernetesNamespace}#-header
      prefix: /
      add_response_headers:
        Strict-Transport-Security "max-age=86400;"
      headers:
        x-rxn-app: vh-web-docs-#{KubernetesNamespace}#
      service: vh-web-docs.#{KubernetesNamespace}#.svc.cluster.local
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      timeout_ms: 30000
      name:  vh-web-docs-map-#{KubernetesNamespace}#-host
      prefix: /
      add_response_headers:
        Strict-Transport-Security "max-age=86400;"
      host: #{KubernetesHostname}#
      service: vh-web-docs.#{KubernetesNamespace}#.svc.cluster.local
spec:
  selector:
    app: vh-web-docs
  ports:
    - port: 443
      name: vh-web-docs-https
      targetPort: http-api
    - port: 80
      name: vh-web-docs-http
      targetPort: http-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vh-web-docs
spec:
  selector:
    matchLabels:
      app: vh-web-docs
  minReadySeconds: 5
  replicas: 2
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        ad.datadoghq.com/vh-web-docs.check_names: |
          [
            "vh-web-docs-check"
          ]
        ad.datadoghq.com/vh-web-docs.init_configs: |
          [
            {
            }
          ]
        ad.datadoghq.com/vh-web-docs.instances: |
          [
            {
              "host":"%%host%%", 
              "port":"%%port%%"
            }
          ]
        ad.datadoghq.com/vh-web-docs.logs: |
          [
            {
              "source":"vh-web-docs",
              "service":"vh-web-docs"
            }
          ]
      labels:
        app: vh-web-docs
      name: vh-web-docs
    spec:
      containers:
        - name: vh-web-docs
          image: #{RegistryName}#/#{ContainerImageName}#:#{ContainerTag}#
          resources:
            requests:
              memory: "250Mi"
              cpu: "25m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http-api
              containerPort: 80
