src/kubernetes/kubernetes.ci.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vh-web-docs-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/health-probe-path: "/"
    appgw.ingress.kubernetes.io/backend-path-prefix: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
      - #{DirectServiceHostname}#
    secretName: vh-web-docs-ingress-secret
  rules:
  - host: #{DirectServiceHostname}#
    http:
      paths:
      - path: /
        backend:
          serviceName: vh-web-docs
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vh-web-docs
spec:
  selector:
    app: vh-web-docs
  ports:
    - port: 80
      name: vh-web-docs-http
      targetPort: http-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vh-web-docs
  labels:
    kube-monkey/enabled: enabled
    kube-monkey/identifier: vh-web-docs
    kube-monkey/mtbf: '1'
    kube-monkey/kill-mode: "fixed"
    kube-monkey/kill-value: '1'
spec:
  selector:
    matchLabels:
      app: vh-web-docs
  minReadySeconds: 5
  replicas: 2
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        kube-monkey/enabled: enabled
        kube-monkey/identifier: vh-web-docs
        app: vh-web-docs
      name: vh-web-docs
    spec:
      containers:
        - name: vh-web-docs
          image: #{RegistryName}#/#{ContainerImageName}#:#{ContainerTag}#
          resources:
            requests:
              memory: "150Mi"
              cpu: "10m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http-api
              containerPort: 80
